--- a/SQLiteExampleApp/app/src/main/AndroidManifest.xml
+++ b/SQLiteExampleApp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SQLiteExampleApp">
         <activity
-            android:name=".MainActivity"
+            android:name=".settings.SettingsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".preferences.MainActivityPreferences"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".threadscorotuine.MainActivityThreads"
+            android:exported="true" />
+        <activity
+            android:name=".helloworld.MainActivityHelloWorld"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".sqlite.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
