--- a/SQLiteExampleApp/app/src/main/AndroidManifest.xml
+++ b/SQLiteExampleApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sqliteexampleapp">
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SQLiteExampleApp">
+
+
         <activity
-            android:name=".settings.SettingsActivity"
+            android:name=".servicesdemo.MediaPlayroom"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".preferences.MainActivityPreferences"
+            android:name=".AsyncTaskLoader.Activitivty_AsyncLoader"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,20 +30,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".threadscorotuine.MainActivityThreads"
+            android:name=".demoasynctask.AsynctaskActivity"
             android:exported="true" />
-        <activity
-            android:name=".helloworld.MainActivityHelloWorld"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".sqlite.MainActivity"
-            android:exported="true" />
+    <receiver android:name=".servicesdemo.MyReceiver"
+        android:enabled="true"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="com.example.sqliteexample.servicedemo.CUSTOM_INTENT"></action>
+        </intent-filter>
+    </receiver>
+        <service android:name=".servicesdemo.mediaplayerservice" />
     </application>
 
 </manifest>
