--- a/SQLiteExampleApp/app/src/main/AndroidManifest.xml
+++ b/SQLiteExampleApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sqliteexampleapp">
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE">
+
+    </uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,6 +34,7 @@
         <activity
             android:name=".demoasynctask.AsynctaskActivity"
             android:exported="true" />
+
     <receiver android:name=".servicesdemo.MyReceiver"
         android:enabled="true"
         android:exported="true">
@@ -39,7 +42,7 @@
             <action android:name="com.example.sqliteexample.servicedemo.CUSTOM_INTENT"></action>
         </intent-filter>
     </receiver>
-        <service android:name=".servicesdemo.mediaplayerservice" />
+        <service android:name=".servicesdemo.mediaplayerservice"/>
     </application>
 
 </manifest>
