--- a/SQLiteExampleApp/app/src/main/AndroidManifest.xml
+++ b/SQLiteExampleApp/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sqliteexampleapp">
-    <uses-permission android:name="android.permission.READ_PHONE_STATE">
 
-    </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
+    <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SQLiteExampleApp">
+        <activity
+            android:name=".smsapp.SMS_MainActivity"
+            android:exported="true">
 
-
+        </activity>
         <activity
             android:name=".servicesdemo.MediaPlayroom"
             android:exported="true">
@@ -25,24 +29,22 @@
         <activity
             android:name=".AsyncTaskLoader.Activitivty_AsyncLoader"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".demoasynctask.AsynctaskActivity"
             android:exported="true" />
 
-    <receiver android:name=".servicesdemo.MyReceiver"
-        android:enabled="true"
-        android:exported="true">
-        <intent-filter>
-            <action android:name="com.example.sqliteexample.servicedemo.CUSTOM_INTENT"></action>
-        </intent-filter>
-    </receiver>
-        <service android:name=".servicesdemo.mediaplayerservice"/>
+        <receiver
+            android:name=".servicesdemo.MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.sqliteexample.servicedemo.CUSTOM_INTENT" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".servicesdemo.mediaplayerservice" />
     </application>
 
 </manifest>
